# kirikiroid2-NG

./: .gitmodules  readme.md
src/core/: CMakeLists.txt
